Topic view - tooltip arrow alignment fix

--- a/public/styles/base.scss
+++ b/public/styles/base.scss
@@ -1458,7 +1458,8 @@ a:link, a:visited {
         content: "";
         position: absolute;
         top: 100%;
-        margin-left: -35px;
+        left: 50%;
+        margin-left: -4px;
         border-width: 4px;
         border-style: solid;
         border-color: $transparent_black transparent transparent transparent;
